# DesktopControllerMCP

./: .gitignore  FASTAPI_FIXES_COMPLETED.md  PYTHON_313_UPGRADE_SUCCESS.md  README.md  TOOL_UPDATE_README.md  UPDATE_README.md  UPDATE_README_OLD.md  config.json  pyproject.toml  setup_mcp.py
mcp/: __init__.py  capture.py  logger.py  main.py  mcp_http_api.py  mcp_stdio_worker.py  vision.py  window.py
mcp-server/: .npmignore  index.js  package-lock.json  package.json
mcp/api/: __init__.py  routes.py
mcp/input/: __init__.py  linux.py  mac.py  win.py
mcp/recorder/: __init__.py  recorder.py
